7-Istio可观测性/1-base-istio-crd-config/1-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-ingressgateway
  namespace: istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*/*.hihihiai.com'
    - '*/*.orvibo.com'
