7-Istio可观测性/1-base-istio-crd-config/0-dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
  namespace: istio
spec:
  host: productpage
