7-Istio可观测性/1-base-istio-crd-config/2-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: istio
spec:
  hosts:
  - "productpage.orvibo.com"
  gateways:
  - istio-system/test-ingressgateway
  http:
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
